Fix deposit flow
