# internal/handler/deposit.go
@@ -1,21 +1,29 @@
 package handler
 
 import (
+	"fmt"
 	"log"
 
 	"github.com/Rhymond/go-money"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
-	uuid2 "github.com/google/uuid"
+	"github.com/google/uuid"
 
 	"github.com/oke11o/walletsuro/internal/generated/models"
 	"github.com/oke11o/walletsuro/internal/generated/restapi/operations/wallet"
-	"github.com/oke11o/walletsuro/internal/model"
+	"github.com/oke11o/walletsuro/internal/utils"
 )
 
 func (s *Server) Deposit(params wallet.DepositParams) middleware.Responder {
-	amount := money.New(params.Body.Amount, model.DefaultCurrency)
-	walletUUID, err := uuid2.Parse(params.Body.WalletUUID.String())
+	currency := money.GetCurrency(params.Body.Currency)
+	if currency == nil {
+		return wallet.NewDepositBadRequest().WithPayload(&models.SimpleResponse{
+			Message: fmt.Sprintf("invalid currency: %s", params.Body.Currency),
+			Status:  400,
+		})
+	}
+	amount := money.New(utils.FloatWithFraction(params.Body.Amount, currency.Fraction), currency.Code)
+	walletUUID, err := uuid.Parse(params.Body.WalletUUID.String())
 	if err != nil {
 		return wallet.NewDepositInternalServerError().WithPayload(&models.SimpleResponse{
 			Message: "неверный wallet uuid",
@@ -33,7 +41,8 @@ func (s *Server) Deposit(params wallet.DepositParams) middleware.Responder {
 
 	return wallet.NewDepositOK().WithPayload(
 		&models.Wallet{
-			Amount:     wal.Amount.Amount(),
+			Amount:     wal.Amount.AsMajorUnits(),
+			Currency:   wal.Amount.Currency().Code,
 			WalletUUID: strfmt.UUID(wal.UUID.String()),
 		},
 	)
